SERVER-15014 Server aborts when querying specific polygon/linestring intersections