src/third_party/s2/base/logging.cc
@@ -19,12 +19,26 @@
 #include "mongo/util/log.h"
 #include "mongo/util/mongoutils/str.h"
 
-LogMessageInfo::LogMessageInfo() : _lsb(mongo::log()) { }
+using ::mongo::logger::LogstreamBuilder;
 
-LogMessageFatal::LogMessageFatal(const char* file, int line) :
-    _lsb(mongo::severe()) {
+LogMessageBase::LogMessageBase(LogstreamBuilder builder, const char* file, int line) :
+    _lsb(builder) {
     _lsb.setBaseMessage(mongoutils::str::stream() << file << ':' << line << ": ");
 }
+
+LogMessageBase::LogMessageBase(LogstreamBuilder builder) : _lsb(builder) { }
+
+LogMessageInfo::LogMessageInfo() : LogMessageBase(mongo::log()) { }
+
+LogMessageWarning::LogMessageWarning(const char* file, int line) :
+        LogMessageBase(mongo::warning(), file, line) { }
+
+LogMessageWarning::~LogMessageWarning() {
+    mongo::logContext(NULL);
+}
+
+LogMessageFatal::LogMessageFatal(const char* file, int line) :
+        LogMessageBase(mongo::severe(), file, line) { }
 
 LogMessageFatal::~LogMessageFatal() {
     _lsb.~LogstreamBuilder();
