src/third_party/s2/base/logging.h
@@ -33,8 +33,8 @@
 #define CHECK_NE(x, y)	CHECK((x) != (y))
 #define CHECK_NOTNULL(x) CHECK((x) != NULL)
 
-#ifndef NDEBUG
-// Debug-only checking.
+#ifdef _DEBUG
+// Checking which is only fatal in debug mode
 #define DCHECK(condition) CHECK(condition)
 #define DCHECK_EQ(val1, val2) CHECK_EQ(val1, val2)
 #define DCHECK_NE(val1, val2) CHECK_NE(val1, val2)
@@ -43,13 +43,13 @@
 #define DCHECK_GE(val1, val2) CHECK_GE(val1, val2)
 #define DCHECK_GT(val1, val2) CHECK_GT(val1, val2)
 #else
-#define DCHECK(condition) CHECK(false)
-#define DCHECK_EQ(val1, val2) CHECK(false)
-#define DCHECK_NE(val1, val2) CHECK(false)
-#define DCHECK_LE(val1, val2) CHECK(false)
-#define DCHECK_LT(val1, val2) CHECK(false)
-#define DCHECK_GE(val1, val2) CHECK(false)
-#define DCHECK_GT(val1, val2) CHECK(false)
+#define DCHECK(x) if(x){}else LogMessageWarning(__FILE__, __LINE__).stream() << "Check failed: " #x
+#define DCHECK_LT(x, y)  DCHECK((x) < (y))
+#define DCHECK_GT(x, y)  DCHECK((x) > (y))
+#define DCHECK_LE(x, y)  DCHECK((x) <= (y))
+#define DCHECK_GE(x, y)  DCHECK((x) >= (y))
+#define DCHECK_EQ(x, y)  DCHECK((x) == (y))
+#define DCHECK_NE(x, y)  DCHECK((x) != (y))
 #endif
 
 #include "base/port.h"
@@ -64,25 +64,44 @@
     if (!(::mongo::logger::globalLogDomain())->shouldLog(::mongo::logger::LogComponent::kGeo, ::mongo::logger::LogSeverity::Debug(5))) {} \
     else ::mongo::logger::LogstreamBuilder(::mongo::logger::globalLogDomain(), ::mongo::getThreadName(), ::mongo::logger::LogSeverity::Debug(5), ::mongo::logger::LogComponent::kGeo)
 
-class LogMessageInfo {
- public:
-  LogMessageInfo();
-  std::ostream& stream() { return _lsb.stream(); }
-
- private:
+class LogMessageBase {
+public:
+    LogMessageBase(::mongo::logger::LogstreamBuilder builder);
+    LogMessageBase(::mongo::logger::LogstreamBuilder builder, const char* file, int line);
+    virtual ~LogMessageBase() { };
+    std::ostream& stream() { return _lsb.stream(); }
+protected:
+    // Fatal message will deconstruct it before abort to flush final message.
     mongo::logger::LogstreamBuilder _lsb;
-  DISALLOW_COPY_AND_ASSIGN(LogMessageInfo);
+private:
+    DISALLOW_COPY_AND_ASSIGN(LogMessageBase);
 };
 
-class LogMessageFatal {
- public:
-  LogMessageFatal(const char* file, int line);
-  ~LogMessageFatal();
-  std::ostream& stream() { return _lsb.stream(); }
+class LogMessageInfo : public LogMessageBase {
+public:
+    LogMessageInfo();
+    virtual ~LogMessageInfo() { };
 
- private:
-    mongo::logger::LogstreamBuilder _lsb;
-  DISALLOW_COPY_AND_ASSIGN(LogMessageFatal);
+private:
+    DISALLOW_COPY_AND_ASSIGN(LogMessageInfo);
+};
+
+class LogMessageWarning : public LogMessageBase {
+public:
+    LogMessageWarning(const char* file, int line);
+    virtual ~LogMessageWarning();
+
+private:
+    DISALLOW_COPY_AND_ASSIGN(LogMessageWarning);
+};
+
+class LogMessageFatal : public LogMessageBase {
+public:
+    LogMessageFatal(const char* file, int line);
+    virtual ~LogMessageFatal();
+
+private:
+    DISALLOW_COPY_AND_ASSIGN(LogMessageFatal);
 };
 
 #endif  // BASE_LOGGING_H
